--- a/package.json
+++ b/package.json
@@ -6,25 +6,35 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "build-github": "ng build --configuration production --base-href 'https://jortegah79.github.io/enjoy/' && cp dist/enjoy/index.html dist/enjoy/404.html",
+    "deploy-github": "npx angular-cli-ghpages --dir=dist/enjoy",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/common": "^20.1.3",
+    "@angular/compiler": "^20.1.3",
+    "@angular/core": "^20.1.3",
+    "@angular/forms": "^20.1.3",
+    "@angular/platform-browser": "^20.1.3",
+    "@angular/platform-browser-dynamic": "^20.1.3",
+    "@angular/router": "^20.1.3",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/leaflet": "^1.9.20",
+    "bootstrap-icons": "^1.13.1",
+    "daisyui": "^5.0.48",
+    "leaflet": "^1.9.4",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.10",
+    "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.15",
-    "@angular/cli": "^19.2.15",
-    "@angular/compiler-cli": "^19.2.0",
+    "@angular/build": "^20.1.3",
+    "@angular/cli": "^20.1.3",
+    "@angular/compiler-cli": "^20.1.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
@@ -32,6 +42,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.8.3"
   }
 }
