--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^20.1.3",
     "@angular/platform-browser-dynamic": "^20.1.3",
     "@angular/router": "^20.1.3",
+    "@angular/service-worker": "^20.1.3",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
     "bootstrap-icons": "^1.13.1",
@@ -42,6 +43,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "pwa-asset-generator": "^8.0.5",
     "typescript": "~5.8.3"
   }
 }
